--- a/exo3/index.html
+++ b/exo3/index.html
@@ -347,6 +347,14 @@
     intérêt de notre histoire se trouvera justifié. Quod erat demonstrandum, ce qui était à démontrer, s'il est permis
     d'appliquer les formules de la scolastique à la science des moeurs.
   </p>
+
+<script>
+let paragraphearray = document.getElementsByTagName("p");
+object.addEventListener("scroll", myScript)
+
+
+</script>
+
 </body>
 
 </html>
