--- a/exo3/index.html
+++ b/exo3/index.html
@@ -348,12 +348,7 @@
     d'appliquer les formules de la scolastique à la science des moeurs.
   </p>
 
-<script>
-let paragraphearray = document.getElementsByTagName("p");
-object.addEventListener("scroll", myScript)
-
-
-</script>
+  <script src="script.js"></script>
 
 </body>
 
